# Monorepo453505

Ivan/Task_12/: senior
Yaroslav/LR2-1/: Task_6.cpp
Yaroslav/LR2-10/: Task_6.cpp
Yaroslav/LR2-2/: Task_6.cpp
Yaroslav/LR2-3/: Task_6.cpp
Yaroslav/LR2-4/: Task_6.cpp
Yaroslav/LR2-5/: Task_6.cpp
Yaroslav/LR2-6/: Task_6.cpp
Yaroslav/LR2-7/: Task_6.cpp
Yaroslav/LR2-8/: Task_6.cpp
Yaroslav/LR2-9/: Task_5.cpp  Task_6.cpp
Yaroslav/LR2-Task_12_V2/: Task_12.cpp
Yaroslav/LR2-Task_12_V3/: Task_12.cpp
Yaroslav/LR2-control/: Task_5.cpp
Yaroslav/LR2-main/: Task_5.cpp
Yaroslav/LR2-master-2/Task1/: Task_1  Task_1.cpp
Yaroslav/LR2-master-2/Task10/: Task_10  Task_10.cpp
Yaroslav/LR2-master-2/Task11/: Task_11  Task_11.cpp
Yaroslav/LR2-master-2/Task12/: Task_12  Task_12.cpp
Yaroslav/LR2-master-2/Task13/: Task_13  Task_13.cpp
Yaroslav/LR2-master-2/Task2/: Task_2  Task_2.cpp
Yaroslav/LR2-master-2/Task3/: Task_3  Task_3.cpp
Yaroslav/LR2-master-2/Task4/: Task_4  Task_4.cpp
Yaroslav/LR2-master-2/Task5/: Task_5
Yaroslav/LR2-master-2/Task6/: Task_6
Yaroslav/LR2-master-2/Task7/: Task_7  Task_7.cpp
Yaroslav/LR2-master-2/Task8/: CMakeLists.txt  Task_8  Task_8.cpp
Yaroslav/LR2-master-2/Task9/: Task_9  Task_9.cpp
